Fixed the ennemy stuck on obstacle and added two level to make the game longer, also changed the ending screen.

--- a/game.css
+++ b/game.css
@@ -77,7 +77,7 @@ body {
 #page-winning {
   width: 100vw;
   height: 100vh;
-  background-image: url("xiw72p8nt8q81.webp");
+  background-image: url("yeepee.png");
   background-position-x: 0;
   background-position-y: 0;
   background-repeat: no-repeat;
